# moleculerpy-repl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: commit-test-check.sh  forge-safety-hook.sh  pr-todo-check.sh  pre-code-check.sh  pre-commit-health.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  COMMANDS.md  PLAN.md
examples/: demo_repl.py  demo_runner.py
src/moleculerpy_repl/: __init__.py  __main__.py  logger.py  output.py  parser.py  repl.py  runner.py
src/moleculerpy_repl/commands/: __init__.py  actions.py  base.py  bench.py  cache.py  call.py  cls.py  dcall.py  destroy.py  emit.py  env.py  events.py  info.py  listener.py  load.py  loglevel.py  metrics.py  nodes.py  quit.py  services.py
tests/: __init__.py  conftest.py  test_commands.py  test_commands_extended.py  test_coverage_boost.py  test_output.py  test_parser.py  test_parser_extended.py  test_repl.py  test_runner.py
